@@ -1,0 +1,22 @@
+# /etc/fstab: static file system information.
+#
+# Use 'vol_id --uuid' to print the universally unique identifier for a
+# device; this may be used with UUID= as a more robust way to name devices
+# that works even if disks are added and removed. See fstab(5).
+#
+# <file system> <mount point>   <type>  <options>       <dump>  <pass>
+proc            /proc           proc    defaults        0       0
+# / was on /dev/sda1 during installation
+UUID=xxxxxxx-ba9f-4232-xxxx-xxxxxxx /               ext4    relatime,errors=remount-ro 0       1
+# swap was on /dev/sda5 during installation
+UUID=xxxxxxxx-xxx-xxxx-b210-xxxxxxxxa none            swap    sw              0       0
+/dev/scd0       /media/cdrom0   udf,iso9660 user,noauto,exec,utf8 0       0
+
+/dev/sdb1	/media/xxx	ext3	defaults	0 0
+
+
+UUID=7260D4F760D4C2c2 /media/storage ntfs defaults,nls=utf8,umask=000,gid=46 0 1    
+
+/dev/sdb1	/media/xxx	ext3	defaults	0 0
+
+UUID=7260D4F760D4C2D1 /media/storage ntfs defaults,nls=utf8,umask=000,gid=46 0 1
