@@ -21,7 +21,7 @@ class MockConfig(object):
 class testQuirks(unittest.TestCase):
 
     def testFglrx(self):
-        mock_lspci_good = set(['1002:7145'])
+        mock_lspci_good = set(['1002:9714'])
         mock_lspci_bad = set(['8086:ac56'])
         q = DistUpgradeQuirks(MockController(), MockConfig)
         self.assert_(q._supportInModaliases("fglrx",
@@ -42,6 +42,15 @@ class testQuirks(unittest.TestCase):
         q._applyPatches(patchdir="./patchdir")
         self.assertFalse("Hello" in open("./patchdir/foo").read())
         self.assertTrue("Hello" in open("./patchdir/foo.orig").read())
+
+    def test_ntfs_fstab(self):
+        q = DistUpgradeQuirks(MockController(), MockConfig)
+        shutil.copy("./test-data/fstab.ntfs.orig", "./test-data/fstab.ntfs")
+        self.assertTrue("UUID=7260D4F760D4C2D1 /media/storage ntfs defaults,nls=utf8,umask=000,gid=46 0 1" in open("./test-data/fstab.ntfs").read())
+        q._ntfsFstabFixup(fstab="./test-data/fstab.ntfs")
+        self.assertTrue(open("./test-data/fstab.ntfs").read().endswith("0\n"))
+        self.assertTrue("UUID=7260D4F760D4C2D1 /media/storage ntfs defaults,nls=utf8,umask=000,gid=46 0 0" in open("./test-data/fstab.ntfs").read())
+        self.assertFalse("UUID=7260D4F760D4C2D1 /media/storage ntfs defaults,nls=utf8,umask=000,gid=46 0 1" in open("./test-data/fstab.ntfs").read())
 
 if __name__ == "__main__":
     import logging
