@@ -7,6 +7,8 @@ update-manager (1:0.125.7) UNRELEASED; urgency=low
       The language-support-translations- packages are removed in 
       karmic and would otherwise be marked as auto-removable.
       (LP: #439296)
+    - convert PASS value from 1 to 0 for ntfs entries in
+      /etc/fstab (LP: #441242) and add tests for it
   * DistUpgrade/DistUpgrade.cfg.hardy:
     - add ability to upgrade from hardy to karmic (as asked for
       by Jonathan Riddell)
@@ -18,6 +20,7 @@ update-manager (1:0.125.7) UNRELEASED; urgency=low
       we can't use langpacks)
   * UpdateManager/backend/InstallBackendAptdaemon.py:
     - give up lock before running aptdaemon (LP: #445920)
+
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Sep 2009 13:32:13 +0200
 
